--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ h3.heading {
   margin: 0 auto 2rem;
 }
 
-/* Resource Section */
+/* Features Section */
 .feature svg.svg-inline--fa {
   color: #1ebba3;
 }
@@ -136,6 +136,24 @@ h3.heading {
 .feature p {
   font-size: 1.1rem;
 }
+
+/* Resource Section */
+.fixed {
+  background-image: url(../img/apple.png);
+  z-index: -1;
+}
+
+.dark {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  padding: 7rem 2rem;
+}
+
+.fixed-background h3 {
+  margin-bottom: 2rem;
+}
+
+/* Clients Section */
 
 
 /*============ BOOTSTRAP BREAK POINTS:
