--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,24 @@ h3.heading {
 }
 
 /* Clients Section */
+#clients img {
+  width: 100%;
+  border-radius: 50%;
+}
+
+blockquote .svg-inline--fa {
+  color: #1ebba3;
+  margin: 1rem;
+}
+
+.clients-hr {
+  border-top: .05rem solid #1ebba3;
+}
+
+/*----- Contact Section -----*/
+
+
+
 
 
 /*============ BOOTSTRAP BREAK POINTS:
