--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,35 @@ hr.socket {
   margin-top: 3rem;
 }
 
+/* -- Media Queries -- */
 
+@media (max-width: 767px) {
+  .caption h1 {
+    font-size: 2.3rem;
+    letter-spacing: .15rem;
+    padding-bottom: .5rem;
+  }
+
+  .caption h3 {
+    font-size: 1.2rem;
+    padding-bottom: 1.2rem;
+  }
+
+  .btn-lg {
+    padding: .5rem 1rem;
+    font-size: 1rem;
+  }
+
+  .narrow h1 {
+    font-size: 1.5rem;
+  }
+
+  #clients img {
+    max-width: 50%;
+    display: block;
+    margin: 0 auto;
+  }
+}
 
 
 
